cabal-version:       2.4

name:                miso-cabal
version:             0.1.0.0
author:              DoctorRyner
maintainer:          drryner@icloud.com

executable miso-cabal
  main-is:             Main.hs
  default-extensions:  RecordWildCards OverloadedStrings
  build-depends:       base ^>=4.12.0.0
                     , miso >=0.21.2.0 && >0.21.1.0
                     , jsaddle
                     , jsaddle-warp

  ghc-options:         -Wall

  hs-source-dirs:      src
  default-language:    Haskell2010